fetching weather, adding fetched addresses to db and possibility to re-fetch previously fetched addresses, removing data.sql columns because it caused violation exception in hibernate, might fix later

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.defer-datasource-initialization=true
+spring.sendgrid.proxy.host=vproxy.univ-lemans.fr
+spring.sendgrid.proxy.port=3128
+spring.devtools.remote.proxy.host=vproxy.univ-lemans.fr
+spring.devtools.remote.proxy.port=3128
